# thecocktaildb-rs

./: Cargo.toml  LICENSE.md  README.md  SECURITY.md  book.toml  flake.nix
.github/workflows/: audit.yml  book.yml  test.yml
thecocktaildb-rs/: Cargo.toml  README.md
thecocktaildb-rs/examples/: by_name.rs  random.rs
thecocktaildb-rs/src/: alcoholics.rs  categories.rs  client.rs  cocktails.rs  glasses.rs  ingredients.rs  lib.rs
