[package]
authors.workspace = true
description = "An API client for TheCocktailDB API"
edition = "2021"
license-file.workspace = true
name = "thecocktaildb-rs"
version = "0.1.0"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "display"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.44.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
