[package]
authors.workspace = true
description = "An API client for TheCocktailDB API"
edition = "2021"
license-file.workspace = true
name = "thecocktaildb-rs"
version = "0.1.1"

[dependencies]
derive_more = { version = "2.1.1", features = ["deref", "display"] }
reqwest = { version = "0.12.27", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
tracing = "0.1.44"
url = "2.5.7"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
